# primd

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
docs/architecture/: layer-1-streaming.md  layer-2-index.md  layer-3-prediction.md  layer-4-coding.md  overview.md  successor-representation.md
docs/benchmarks/: bench-report.md
docs/business/: competitive-landscape.md  gap-analysis.md  market-research.md  positioning.md  risks.md  strategy-2026-05.md
docs/integrations/: livekit.md  moshirag.md  wasm.md
docs/plan/: phase-1-foundation.md  phase-2-intelligence.md  phase-3-integration.md  post-v1.md  roadmap.md
docs/references/: neuroscience-framing.md  prior-art.md
docs/tech-spec/: benchmark-protocol.md  feasibility-assessment.md  technical-specification.md
examples/: README.md  faq.jsonl  transcripts.jsonl
examples/pipecat/: README.md  cli_demo.py  primd_client.py  primd_retriever.py  requirements.txt  voice_agent.py
livekit-primd/: README.md  pyproject.toml
livekit-primd/livekit_primd/: __init__.py  client.py  retriever.py
livekit-primd/tests/: test_client.py  test_retriever.py
pipecat-primd/: README.md  pyproject.toml
pipecat-primd/pipecat_primd/: __init__.py  client.py  retriever.py
pipecat-primd/tests/: test_client.py
primd-bench/: Cargo.toml
primd-bench/benches/: binary_scan.rs  external_baseline.rs  full_pipeline.rs  paraphrase_ab.rs  predict.rs  predictor_ab.rs  streaming.rs  voice_session.rs
primd-cli/: Cargo.toml
primd-cli/src/: cmd_index.rs  cmd_query.rs  cmd_serve.rs  cmd_train.rs  main.rs
primd-core/: Cargo.toml
primd-core/src/: cold_tier.rs  lib.rs  query_context.rs
primd-core/src/embed/: binary.rs  embedder.rs  hashed.rs  local.rs  mod.rs  openai.rs
primd-core/src/index/: events.rs  heap.rs  hnsw.rs  mod.rs  shards.rs  signatures.rs
primd-core/src/predict/: cache.rs  markov.rs  mod.rs  predictor.rs  prefetch.rs  state.rs  streaming.rs  trainer.rs
primd-dwm/: Cargo.toml
primd-dwm/src/: bitvec.rs  cold_tier.rs  lib.rs  random_indexing.rs  signature_dwm.rs
primd-sr/: Cargo.toml
primd-sr/src/: lib.rs  low_rank.rs  pca.rs
primd-wasm/: Cargo.toml
primd-wasm/src/: lib.rs
