[workspace]
members = ["primd-core", "primd-cli", "primd-bench"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Rohan <rohan@primd.dev>"]
repository = "https://github.com/rohansx/primd"

[workspace.dependencies]
bytemuck = { version = "1", features = ["derive"] }
rayon = "1"
thiserror = "2"
memmap2 = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
