[package]
name = "primd-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Benchmarks for primd retrieval engine"
publish = false

[dependencies]
primd-core = { path = "../primd-core" }
rand.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "binary_scan"
harness = false
