[package]
name = "primd-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Benchmarks for primd retrieval engine"
publish = false

[dependencies]
primd-core = { path = "../primd-core" }
primd-sr = { path = "../primd-sr" }
rand.workspace = true

[dev-dependencies]
criterion.workspace = true
instant-distance = "0.6"

[[bench]]
name = "binary_scan"
harness = false

[[bench]]
name = "predict"
harness = false

[[bench]]
name = "streaming"
harness = false

[[bench]]
name = "full_pipeline"
harness = false

[[bench]]
name = "voice_session"
harness = false

[[bench]]
name = "external_baseline"
harness = false

[[bench]]
name = "predictor_ab"
harness = false
