[package]
name = "primd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for primd: index, train, serve, benchmark"

[[bin]]
name = "primd"
path = "src/main.rs"

[dependencies]
primd-core = { path = "../primd-core", features = ["openai", "local"] }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tiny_http.workspace = true
