[package]
name = "primd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sub-millisecond predictive retrieval runtime for voice AI"

[dependencies]
bytemuck.workspace = true
rayon.workspace = true
thiserror.workspace = true
memmap2.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq = { workspace = true, optional = true }
fastembed = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true

[features]
default = []
openai = ["dep:ureq"]
local = ["dep:fastembed"]
