[package]
name = "primd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Sub-millisecond predictive retrieval runtime for voice AI. Open-source VoiceAgentRAG."
keywords = ["voice-ai", "rag", "retrieval", "voiceagentrag", "low-latency"]
categories = ["text-processing", "science", "algorithms"]
readme = "../README.md"

[dependencies]
bytemuck.workspace = true
rayon.workspace = true
thiserror.workspace = true
memmap2.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq = { workspace = true, optional = true }
fastembed = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true

[features]
default = []
openai = ["dep:ureq"]
local = ["dep:fastembed"]
